snapshot-tests/tests/snapshots/parser__datetimes__utc_trailing_dot.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidDateTime]: invalid datetime: expected fractional digits after decimal point at utc
  ┌─ utc_trailing_dot:1:7
  │
1 │ utc = 2016-09-09T09:09:09.Z
  │       ^^^^^^^^^^^^^^^^^^^^^ invalid datetime: expected fractional digits after decimal point
